# immocv

./: .gitignore  README.md  pyproject.toml  ventes-68.ipynb
.devcontainer/: devcontainer.json
my_sandbox/moviereview/: MovieReview.py
my_sandbox/streamlit/: requirements.txt
my_sandbox/streamlit-apps/: streamlit_app.py  streamlit_app_load.py
notebooks/: AppartementIrisACP.ipynb  AppartementIrisCode.ipynb  ModellingAppartement-V1.ipynb  ModellingAppartement-V2.ipynb  ModellingAppartement-V3.ipynb  ModellingAppartement-load-V3 .ipynb  PredictionAppartement-load.ipynb  PredictionAppartement.ipynb  TraitementAppartement-V1.ipynb  TraitementAppartement-V2.ipynb  TraitementMaison_08-09.ipynb  regions.py  ventes-69-a.ipynb  ventes-69.ipynb  ventes-auvergne-rhone-alpes.ipynb  ventes-dvf-a-exploration.ipynb  ventes_region_generator.ipynb
notebooks/dvf/: dvf_data_exploration.ipynb  ventes-dvf-a-exploration.ipynb  ventes-dvf-m-exploration.ipynb
notebooks/miscellaneous/: MilesPerGallon.ipynb  api-fundamentals.ipynb  fraudDataExam.ipynb  fraudDataExam2.ipynb  fraud_test.ipynb  hymenoptera.ipynb  imdb.ipynb  pytorch-exam.ipynb  vehicle.ipynb
notebooks/regions/: ventes-68.ipynb  ventes-69.ipynb
notebooks/streamlit/: ACP_immo.py  config.py  dataVis.py  monthly_data.parquet  monthly_inflation_data.parquet  requirements.txt  streamlit_avr25_cds_projet_immobilier.py  streamlit_data_vis.py  streamlit_maison_app.py  streamlit_modelisation_app.py  streamlit_prevision.py  streamlit_prevision_app.py
notebooks/streamlit/data/model/: linear-regressors-ACP-REG.parquet  linear-regressors-ACP.parquet  linear-regressors-REG.parquet  linear-regressors.parquet  non-linear-regressors-ACP-REG.parquet  non-linear-regressors-ACP.parquet  non-linear-regressors-REG.parquet  non-linear-regressors.parquet
notebooks/streamlit/data/pred-prix/: Reference_IRIS_geo2025.parquet  df_ACP2_IRIS_immo.parquet  stat_COM_appartement.parquet  stat_COM_maison.parquet  stat_IRIS_appartement.parquet  stat_IRIS_maison.parquet
notebooks/streamlit/data/visu/: DataSummaryTable.pkl  corr_df_appartement_pearson.pkl  corr_df_appartement_spearman.pkl  corr_df_maison_pearson.pkl  corr_df_maison_spearman.pkl
streamlit/: streamlit_app.py  streamlit_app_load.py
