[project]
name = "immocv"
version = "0.1.0"
description = "immo cv"
authors = [
    {name = "cvdev21"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "xgboost (>=3.0.5,<4.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "torch (>=2.9.0,<3.0.0) ; python_version >= \"3.11\" and python_version < \"3.15\" and sys_platform == \"linux\"",
    "streamlit (>=1.51.0,<2.0.0)",
    "nltk (>=3.9.2,<4.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "ipywidgets (==8.1.2)",
    "widgetsnbextension (>=4.0.15,<5.0.0)",
    "shap (>=0.50.0,<0.51.0)",
    "prophet (>=1.2.1,<2.0.0)",
    "statsmodels (>=0.14.6,<0.15.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[tool.poetry.group.dev.dependencies]
parquet-tools = "^0.2.16"

